# fixme_report

./: .gitignore  Cargo.toml  LICENSE  README.md  example_todo.tmpl
.github/workflows/: rust.yml
samples/: patchset_example  sample.rs  sample_with_todo  samples_multiline
src/: config.rs  error.rs  lib.rs  main.rs  parser.rs
src/issue_tracker/: github.rs  mod.rs
