[package]
name = "fixme_report"
version = "0.2.0"
authors = ["Benjamin Coenen <5719034+bnjjj@users.noreply.github.com>"]
edition = "2018"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.3"
aho-corasick = "0.7.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.45"
unidiff = "0.3.2"
lazy_static = "1.4.0"
thiserror = "1.0.9"
config = "0.10.1"
clap = "2.33.0"
async-trait = "0.1.22"
futures = "0.3.1"
handlebars = "3.0.1"

[dependencies.github-rs]
version = "0.7"
default-features = false
features = ["rust-native-tls"]

[dependencies.async-std]
version = "1.4.0"
features = ["unstable", "attributes"]
